# warrant

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  vercel.json
app/: Cargo.toml
app/circuits/: mandate.circom  mandate_allow.circom  mandate_oracle_allow.circom  mandate_oracle_allow_addr.circom  poseidon2.circom  poseidon3.circom  poseidon4.circom  probe.circom
app/contracts/warrant/: Cargo.toml
app/contracts/warrant_addr/: Cargo.toml
app/contracts/warrant_addr/src/: lib.rs
app/frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.js
app/frontend/public/: breach.input.json  breach.input.json.meta.json  demo-config.json  non_allow.input.json  non_allow.input.json.meta.json  over_limit.input.json  over_limit.input.json.meta.json  valid.input.json  valid.input.json.meta.json
app/frontend/src/: App.jsx  main.jsx  polyfills.js  styles.css
app/proving/: probe_input.json
app/scripts/: addr_controls.mjs  address_identity.mjs  address_identity_fixtures.json  advance_book.js  allowlist.js  audit_all.sh  audit_frontend.mjs  audit_secrets.mjs  book_input.js  book_input_allow.js  book_input_oracle_allow.js  book_input_oracle_allow_addr.mjs  build_circuit.sh  build_circuit_addr.sh  gen_addr_controls.mjs  gen_sequence.mjs  genesis_book.json  mandate_input.js  oracle_book.json  oracle_book_addr.json  poseidon.js  prepare_ui_demo.sh  run_demo.sh  run_oracle_demo.sh  setup_toolchain.sh  sign_price.js  test_address_identity.mjs  verify_multisettle.mjs
docs/: demo-narration.md
(+35 files in other folders)
