[package]
name = "warrant-addr"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25.1.0", features = ["hazmat-address"] }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["hazmat-address", "testutils"] }
